# netusb_camera_driver

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: NETUSBCamera.cfg
cmake/: DownloadNETUSBCAM.cmake  FindNETUSBCAM.cmake  FindOrDownloadNETUSBCAM.cmake  PatchUdev.cmake  download_netusbcam.py
include/netusb_camera_driver/: NETUSBCamera.h  exceptions.h  netusb_camera_nodelet.h
launch/: camera.launch
src/: NETUSBCamera.cpp  netusb_camera_node.cpp  netusb_camera_nodelet.cpp
